...

class LoginView extends React.Component<ILoginViewProps, ILoginViewState> {
	private passwordInput: RNTextInput | null | undefined;

	static navigationOptions = ({ route, navigation }: ILoginViewProps) => ({
		title: route?.params?.title ?? 'Rocket.Chat',
		headerRight: () => <HeaderButton.Legal testID='login-view-more' navigation={navigation} />
	});

	constructor(props: ILoginViewProps) {
		super(props);
		this.state = {
			user: props.route.params?.username ?? '',
...
					keyboardType='email-address'
					returnKeyType='next'
					onChangeText={(value: string) => this.setState({ user: value })}
					onSubmitEditing={() => {
						this.passwordInput?.focus();
					}}
					testID='login-view-email'
					textContentType='username'
					autoComplete='username'
					value={user}
				/>
				<FormTextInput
					label={I18n.t('Password')}
...
